// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "persist-client/src/impl/state.proto";

package mz_persist_client.impl.service;

message ProtoCompactReq {
    string shard_id = 1;
    mz_persist_client.impl.state.ProtoU64Description desc = 2;
    repeated mz_persist_client.impl.state.ProtoHollowBatch inputs = 3;
    string ts_codec = 4;
}

message ProtoCompactRes {
    mz_persist_client.impl.state.ProtoHollowBatch output = 1;
}

service ProtoPersist {
    rpc Compact (ProtoCompactReq) returns (ProtoCompactRes);
}
