// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

syntax = "proto3";

package mz_storage.controller;

message ProtoCollectionMetadata {
    string blob_uri = 1;
    string consensus_uri = 2;
    string data_shard = 3;
    string remap_shard = 4;
}
